# simu_communication

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  ANTI_JAM_CONSTANTS_FIX_REPORT.md  ANTI_JAM_REFACTORING_REPORT.md  BUILD.md  CMakeLists.txt  COMPILATION_FIXES_REPORT.md  CTestTestfile.cmake  CommunicationCounterModel.sln  CommunicationModel.vcxproj  CommunicationModel.vcxproj.filters  DYNAMIC_LIBRARY_GUIDE.md  ENVIRONMENT_LOSS_MIGRATION_REPORT.md  FREE_SPACE_PATH_LOSS_REFACTOR_REPORT.md  HARDCODED_CONSTANTS_REPLACEMENT_REPORT.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  JAMMER_REFACTORING_REPORT.md  PATH_LOSS_MIGRATION_REPORT.md  README.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  TEST_MERGE_REPORT.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build_from_build_cmakelists.ps1  simple_receive_test.cpp  test_anti_jam_parameter_config.cpp  test_constants.cpp  test_constants_cmake.txt  test_jammer_CMakeLists.txt  test_jammer_parameter_config.cpp  test_path_loss_migration.cpp  开发约束文档.md  开发计划.md  测试总结报告.md
examples/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  basic_usage_example.cpp  basic_usage_example.vcxproj  basic_usage_example.vcxproj.filters  environment_config_example.cpp  environment_config_example.vcxproj  environment_config_example.vcxproj.filters  run_examples.vcxproj  run_examples.vcxproj.filters  simple_environment_config_example.cpp  simple_environment_config_example.vcxproj  simple_environment_config_example.vcxproj.filters  test_csharp_example.ps1
examples/basic_usage_example.dir/Debug/: basic_usage_example.exe.recipe
examples/basic_usage_example.dir/Debug/basic_us.F207553E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
examples/csharp/: CommunicationModelExample.csproj  CommunicationModelExample.sln  CommunicationModelWrapper.cs  Program.cs
examples/csharp/CommunicationModelWrapper/: CommunicationModelWrapper.csproj  CommunicationModelWrapper.targets
examples/csharp/Tests/: InteropTests.cs
examples/csharp/WebApiContracts/: CommunicationModelInit.sample.json  CommunicationModelInitDto.cs  CommunicationModelInitDtoValidator.cs
examples/environment_config_example.dir/Debug/environm.816E6F55.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  environment_config_example.lastbuildstate
examples/simple_environment_config_example.dir/Debug/: simple_environment_config_example.exe.recipe
examples/simple_environment_config_example.dir/Debug/simple_e.CBEFB1BB.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
examples/test-nuget-publish/: NuGet.Config  TestNuGetPublish.csproj  TestNuGetPublish.sln
tests/: CMakeLists.txt  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  run_all_tests.vcxproj  run_all_tests.vcxproj.filters  run_config_tests.vcxproj  run_config_tests.vcxproj.filters  run_integration_tests.vcxproj  run_integration_tests.vcxproj.filters  run_migration_tests.vcxproj  run_migration_tests.vcxproj.filters  run_unit_tests.vcxproj  run_unit_tests.vcxproj.filters  simple_receive_test.vcxproj  simple_receive_test.vcxproj.filters  test_anti_jam_parameter_config.vcxproj  test_anti_jam_parameter_config.vcxproj.filters  test_build_run.ps1  test_communication_anti_jam.vcxproj  test_communication_anti_jam.vcxproj.filters  test_communication_distance.vcxproj  test_communication_distance.vcxproj.filters  test_communication_jammer.vcxproj  test_communication_jammer.vcxproj.filters  test_communication_model_api.vcxproj  test_communication_model_api.vcxproj.filters  test_communication_receive.vcxproj  test_communication_receive.vcxproj.filters  test_constants.cpp  test_environment_loss_migration.vcxproj  test_environment_loss_migration.vcxproj.filters  test_free_space_path_loss_refactor.vcxproj  test_free_space_path_loss_refactor.vcxproj.filters  test_integration.vcxproj  test_integration.vcxproj.filters  test_jammer_parameter_config.vcxproj  test_jammer_parameter_config.vcxproj.filters  (+6 more)
tests/integration/: CMakeLists.txt  test_basic_integration.cpp  test_environment_loss_migration.cpp  test_free_space_path_loss_refactor.cpp  test_full_communication_scenarios.cpp  test_path_loss_migration.cpp
tests/performance/: CMakeLists.txt  test_communication_model_performance.cpp
tests/simple_receive_test.dir/Debug/: simple_receive_test.exe.recipe
tests/simple_receive_test.dir/Debug/simple_r.CADD12B8.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  link.command.1.tlog  (+3 more)
tests/test_anti_jam_parameter_config.dir/Debug/: test_anti_jam_parameter_config.exe.recipe
tests/test_communication_anti_jam.dir/Debug/: test_communication_anti_jam.exe.recipe
tests/test_communication_distance.dir/Debug/: test_communication_distance.exe.recipe
tests/test_communication_receive.dir/Debug/: test_communication_receive.exe.recipe
tests/test_environment_loss_migration.dir/Debug/: test_environment_loss_migration.exe.recipe
tests/test_integration.dir/Debug/: test_integration.exe.recipe
tests/test_receive_parameter_config.dir/Debug/: test_receive_parameter_config.exe.recipe
tests/test_signal_transmission.dir/Debug/: test_signal_transmission.exe.recipe
tests/unit/: CMakeLists.txt  test_anti_jam_parameter_config.cpp  test_communication_anti_jam_model.cpp  test_communication_distance_model.cpp  test_communication_jammer_model.cpp  test_communication_model_api.cpp  test_communication_model_api_basic.cpp  test_communication_model_api_calculations.cpp  test_communication_model_api_jamming.cpp  test_communication_receive_model.cpp  test_jammer_parameter_config.cpp  test_receive_parameter_config.cpp  test_signal_transmission_model.cpp
(+122 files in other folders)
